fixed bug #3545 - Field graphic elements shifted up in Visual Editor

--- a/Website/Frontend/Config/VisualEditor/Styles/core.css
+++ b/Website/Frontend/Config/VisualEditor/Styles/core.css
@@ -83,3 +83,7 @@ acronym {
 abbr, html\:abbr {
 	border-bottom:1px dashed #CCC; cursor:help;
 }
+
+img.compositeFieldReferenceWysiwygRepresentation {
+  margin: 0px; padding: 0px;
+}
